<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_img"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity= "center"
    android:padding="10dp"
    tools:context="com.feelingsdiary.feelingsdiaryscripts.QuizActivity">

    <ImageView
        android:id="@+id/imagePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/rounded_box"/>

    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/q1"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:textSize="19sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/purple_200"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:id="@+id/first_button"
            android:layout_marginRight="1dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/rounded_box"
            android:text="@string/text_1" />

        <Button
            android:id="@+id/second_button"
            android:layout_marginLeft="1dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/rounded_box"
            android:text="@string/text_2" />

        <Button
            android:id="@+id/third_button"
            android:layout_marginLeft="1dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/rounded_box"
            android:text="@string/text_3" />

        <Button
            android:id="@+id/fourth_button"
            android:layout_marginLeft="1dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/rounded_box"
            android:text="@string/text_4" />

        <Button
            android:id="@+id/fifth_button"
            android:layout_marginLeft="1dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/rounded_box"
            android:text="@string/text_5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#00D0E7F7"
            android:src="@drawable/leftbutton"
            android:text="@string/prev_text"
            />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rightbutton"

            android:text="@string/next_text" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:gravity="center">

        <Button
            android:id="@+id/exitQuizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_box"
            android:text="Go back to main page" />


    </RelativeLayout>

</LinearLayout>